tests/predator-regre/test-0002.err
test-0002.c:11: error: dereference of NULL value
test-0002.c:9: error: invalid dereference
